--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint && prettier --write \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.14.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-aspect-ratio": "^1.0.2",
@@ -35,33 +35,39 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-toggle": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
-    "class-variance-authority": "^0.5.2",
+    "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.145.0",
-    "next": "13.3.0",
+    "next": "^13.4.1",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@types/node": "^18.16.7",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
-    "postcss": "8.4.21",
-    "prettier": "^2.8.7",
-    "prisma": "^4.12.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prisma": "^4.14.0",
+    "rehype-pretty-code": "^0.9.5",
+    "remark-gfm": "^3.0.1",
+    "remark-rehype": "^10.1.0",
+    "shiki": "^0.14.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "unist-util-visit": "^4.1.2"
   }
 }
