--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "rehype-prism-plus": "^1.5.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   },
@@ -62,10 +63,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prisma": "^4.14.0",
-    "rehype-pretty-code": "^0.9.5",
     "remark-gfm": "^3.0.1",
-    "remark-rehype": "^10.1.0",
-    "shiki": "^0.14.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "unist-util-visit": "^4.1.2"
