--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.145.0",
     "next": "^13.4.1",
     "next-mdx-remote": "^4.4.1",
