--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "react-wrap-balancer": "^1.0.0",
     "rehype-prism-plus": "^1.5.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
